gobmkida/c1/status_to_string
/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/status_to_string/src/engine/printutils.c:784:8: error: use of undeclared identifier 'off_48A620'
return off_48A620[status]; 
       ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O1/gobmk-clang-O1/status_to_string/src/obj/1/printutils.o] Error 1
